<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"/>

    <item
        android:id="@+id/navigation_walks"
        android:icon="@drawable/ic_directions_walk_black_24dp"
        android:title="@string/title_walks"/>

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/title_stats"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile"/>

    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/ic_people_black_24dp"
...
