<resources>

    <string name="app_name">Personal Best</string>
    <string name="title_home">Home</string>

    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_stats">Stats</string>
    <string name="title_walks">Walks</string>
    <string name="title_friends">Friends</string>
    <string name="title_notifications">Notifications</string>

    // for initial activity
    <string name="feet_edit_text">ft</string>
...
